Adding in html example code

--- a/src/app/Components/console/html-sandbox/html-sandbox.component.html
+++ b/src/app/Components/console/html-sandbox/html-sandbox.component.html
@@ -1,3 +1,32 @@
-<p>
-  html-sandbox works!
-</p>
+<section class="code-module" [ngStyle]="{'background-color': '#' + theme.background}">
+<span [ngStyle]="{'color': '#' + theme.tag}">&lt;!DOCTYPE</span> <span [ngStyle]="{'color': '#' + theme.attributeName}">HTML</span> <span [ngStyle]="{'color': '#' + theme.tag}">PUBLIC</span> "-//W3C//DTD HTML 3.2//EN"<span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><br>
+<!--
+*        Sample comment
+-->
+<span [ngStyle]="{'color': '#' + theme.comment}">
+  <span>&lt;&#33;&#45;&#45;</span><br>
+  <span>&#42; Sample comment</span><br>
+  <span>&#45;&#45;&gt;</span><br>
+</span><br>
+  <span [ngStyle]="{'color': '#' + theme.tag}">&lt;</span><span [ngStyle]="{'color': '#' + theme.tagName}">html</span><span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><br>
+<span [ngStyle]="{'color': '#' + theme.tag}">&lt;</span><span [ngStyle]="{'color': '#' + theme.tagName}">head</span><span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><br>
+  <span [ngStyle]="{'color': '#' + theme.tag}">&lt;</span><span [ngStyle]="{'color': '#' + theme.tagName}">title</span><span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><span [ngStyle]="{'color': '#' + theme.defaultText}">WebStorm</span><span [ngStyle]="{'color': '#' + theme.tag}">&lt;&#47;</span><span [ngStyle]="{'color': '#' + theme.tagName}">title</span><span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><br>
+<span [ngStyle]="{'color': '#' + theme.tag}">&lt;&#47;</span><span [ngStyle]="{'color': '#' + theme.tagName}">head</span><span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><br>
+<span [ngStyle]="{'color': '#' + theme.tag}">&lt;</span><span [ngStyle]="{'color': '#' + theme.tagName}">body</span><span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><br>
+  <span [ngStyle]="{'color': '#' + theme.tag}">&lt;</span><span [ngStyle]="{'color': '#' + theme.tagName}">h1</span><span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><span [ngStyle]="{'color': '#' + theme.defaultText}">WebStorm</span><span [ngStyle]="{'color': '#' + theme.tag}">&lt;&#47;</span><span [ngStyle]="{'color': '#' + theme.tagName}">h1</span><span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><br>
+<span [ngStyle]="{'color': '#' + theme.tag}">&lt;</span><span [ngStyle]="{'color': '#' + theme.tagName}">p</span><span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><span [ngStyle]="{'color': '#' + theme.tag}">&lt;</span><span [ngStyle]="{'color': '#' + theme.tagName}">br</span><span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><span [ngStyle]="{'color': '#' + theme.tag}">&lt;</span><span [ngStyle]="{'color': '#' + theme.tagName}">b</span><span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><span [ngStyle]="{'color': '#' + theme.tag}">&lt;</span><span [ngStyle]="{'color': '#' + theme.tagName}">img</span> <span [ngStyle]="{'color': '#' + theme.attributeName}">border=</span><span [ngStyle]="{'color': '#' + theme.attributeValue}">0</span> <span [ngStyle]="{'color': '#' + theme.attributeName}">height=</span><span [ngStyle]="{'color': '#' + theme.attributeValue}">12</span> <span [ngStyle]="{'color': '#' + theme.attributeName}">src=</span><span [ngStyle]="{'color': '#' + theme.attributeValue}">"images/hg.gif"</span> <span [ngStyle]="{'color': '#' + theme.attributeName}">width=</span><span [ngStyle]="{'color': '#' + theme.attributeValue}">18</span> <span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><br>
+  <span [ngStyle]="{'color': '#' + theme.defaultText}">What is WebStorm?</span> <span [ngStyle]="{'color': '#' + theme.entityRef}">{{htmlEntityExample}}</span> <span [ngStyle]="{'color': '#' + theme.tag}">&lt;&#47;</span><span [ngStyle]="{'color': '#' + theme.tagName}">b</span><span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><span [ngStyle]="{'color': '#' + theme.tag}">&lt;</span><span [ngStyle]="{'color': '#' + theme.tagName}">br</span><span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><span [ngStyle]="{'color': '#' + theme.tag}">&lt;</span><span [ngStyle]="{'color': '#' + theme.tagName}">br</span><span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><br>
+<span [ngStyle]="{'color': '#' + theme.tag}">&lt;&#47;</span><span [ngStyle]="{'color': '#' + theme.tagName}">body</span><span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><br>
+<span [ngStyle]="{'color': '#' + theme.tag}">&lt;&#47;</span><span [ngStyle]="{'color': '#' + theme.tagName}">html</span><span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span><br>
+</section>
+<!--
+< ==== &lt;
+> === &gt;
+</ ==== &lt;&#47;
+
+<span [ngStyle]="{'color': '#' + theme.tag}">&gt;</span>
+&lt;</span>
+&lt;&#47;</span>
+
+<span [ngStyle]="{'color': '#' + theme.defaultText}">TEXT</span>
+-->
