--- a/src/app/Components/selection-controls/html-controls/html-controls.component.html
+++ b/src/app/Components/selection-controls/html-controls/html-controls.component.html
@@ -22,7 +22,7 @@
     </div>
     <div class="color-input-container">
       <label for="tagNames">Tag Names</label>
-      <input type="text" name="tagNames" id="tagNames" [(ngModel)]="theme.tagNames">
+      <input type="text" name="tagNames" id="tagNames" [(ngModel)]="theme.tagName">
     </div>
     </section>
   <h2><span class="accordion-toggle" (click)="hideComments = !hideComments">{{!hideComments ? 'hide' : 'show'}}</span>Comment Colors {{!hideComments ? '' : '...'}}</h2>
